added unit tests and swagger oauth config
